--- a/MVC/Views/index.ejs
+++ b/MVC/Views/index.ejs
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Finance</title>
-    <link rel="stylesheet" href="/css/style.css"></link>
+<%- include('components/head.ejs') %>
+    <%- include('bootstrap/css.ejs') %>
+    <link rel="stylesheet" href="/css/index.css"></link>
 </head>
 <body>
+    <%- include('components/navbar.ejs') %>
+    
     <h1>Testing ejs from <%= env %></h1>
+    <div class="container">
+        <p>Inside the container</p>
+        <p>hello</p>
+    </div>
+
+
+
+
+
+
+    <%- include('bootstrap/js.ejs') %>
 </body>
 </html>
